fixing spacing

--- a/myPage.css
+++ b/myPage.css
@@ -59,3 +59,7 @@ h2{
 video{
 	margin-left: 10%;
 }
+
+.hack{
+	height: 10px;
+}
